# test-tauri-dev-tools

./: .gitignore  package.json
.github/workflows/: cd.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  runner.rs  utils.rs
src/controllers/: KeyPressedManager.ts
src/hooks/: useCommandWithKeyboardEvent.ts
src/tauri-commands/: openAppDataDir.ts  openDevtools.ts
src/types/: KeyPressed.ts  OsType.ts
